k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: push-system
  labels:
    name: push-system
